<resources>
    <string name="app_name">GMV</string>
    <string name="title_nav_articulos">ARTICULOS</string>
    <string name="title_nav_clientes">CLIENTES</string>
    <string name="title_nav_promoc">PROMOCIÓNES</string>
    <string name="title_nav_profile">PERFIL</string>
    <string name="privacy_policy_url">https://www.solodroid.net/apps/privacy-policy/ecommerce/</string>
    <string name="share_app">I Would like to share this E-Commerce Android App with you. Here You Can Download This Application from PlayStore</string>
    <string name="share_product_section_one">Find</string>
    <string name="share_product_section_two">with price</string>
    <string name="share_product_section_three">! Get it now in E-Commerce Android App!</string>
    <string name="no_internet">Por favor, habilitar la conexión a internet antes de usar la app</string>
    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="long_lorem_ipsum">
        Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.
        \n\nNulla id lectus metus. Maecenas a lorem in odio auctor facilisis non vitae nunc. Sed malesuada volutpat massa. Praesent sit amet lacinia augue, mollis tempor dolor.
    </string>
    <string name="long_lorem_ipsum_2">
        Vivamus porttitor, erat at aliquam mollis, risus ligula suscipit metus, id semper nisi dui lacinia leo. Praesent at feugiat sem. Vivamus consectetur arcu sit amet metus efficitur dapibus. Sed metus ligula, efficitur quis finibus nec, pellentesque nec nulla. Nunc nec magna iaculis turpis vehicula condimentum id lobortis lectus.
        \n\nQuisque augue diam, convallis nec mollis in, placerat nec elit. Aliquam non erat tristique, consequat tortor ultricies, sodales erat. Aliquam quis enim eu nulla facilisis sollicitudin eu mollis mauris. Donec ornare urna non libero volutpat tempus. Mauris elementum egestas ex, a laoreet urna. Ut a magna mattis, sodales massa a, blandit justo.
    </string>
    <string name="very_long_lorem_ipsum_2">
        Aliquam eu mauris lectus. Pellentesque lacinia ut urna ut gravida. Proin libero sem, auctor in posuere sit amet, porta a nibh. Vivamus maximus nunc eu urna pellentesque vulputate. Phasellus lacinia ut diam id mattis. Ut fermentum, sem non viverra maximus, elit massa varius dolor, ac elementum mi nunc eu orci. Fusce ornare mi sed dapibus tempus. Quisque sollicitudin condimentum ex vitae imperdiet. Mauris et est non nibh gravida suscipit eget id est.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis quis elit sed cursus. In commodo malesuada elit. Curabitur eget tortor ipsum. In consequat sollicitudin rhoncus. Donec interdum felis vitae ipsum mattis congue. Suspendisse eget tellus sit amet nunc egestas ultrices. Sed placerat eu arcu vel ullamcorper. Curabitur a dictum odio. Suspendisse fermentum ex vel ullamcorper scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam at nisl orci. Nullam ligula purus, pulvinar vel ligula sodales, tincidunt porttitor enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut semper tincidunt scelerisque. Praesent mollis magna ut consequat dictum.
        \n\nDuis in vestibulum dui, non pulvinar tortor. Maecenas finibus nulla purus, ac consectetur erat finibus vitae. Ut eget convallis dolor. Mauris a leo nunc. Nullam facilisis tincidunt odio eget laoreet. Integer sapien ipsum, fringilla id purus et, cursus convallis dolor. Etiam vel lacinia nibh. Donec sollicitudin fermentum eleifend. Vivamus quis mauris in libero vehicula aliquet sit amet quis odio. Etiam et tincidunt turpis, vel iaculis urna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam et mollis enim.
        \n\nPraesent interdum lectus suscipit enim dictum, sed laoreet nisl posuere. Curabitur accumsan tellus ac iaculis fermentum. Curabitur a purus nec nibh porta imperdiet. Vivamus dignissim libero ut mauris rhoncus finibus non at urna. Phasellus a varius elit, a blandit est. Cras sodales tincidunt purus sit amet condimentum. Phasellus consectetur sem nec nisi congue, id gravida risus tristique. Curabitur vulputate convallis purus, vel bibendum nunc ultricies at.
        \n\nInteger condimentum egestas eros mollis facilisis. Praesent vitae diam ac diam efficitur pretium nec vitae dui. Nunc quam est, porttitor ut dapibus non, sodales id nulla. Mauris facilisis malesuada dapibus. Aliquam erat volutpat. Vivamus vitae consequat mauris, nec dictum erat. Aliquam in consectetur est, sit amet varius risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent vulputate dapibus lorem, ut interdum lectus bibendum nec. Suspendisse potenti. Cras elementum cursus nisl, ac pulvinar eros fringilla vitae. Cras ac tortor sagittis diam feugiat tincidunt id at est. Curabitur consequat ante purus. Nunc malesuada scelerisque leo vel efficitur.
    </string>
    <string name="title_cart">Carrito</string>
    <string name="title_checkout">Enviar</string>
    <string name="action_cart">Mi Carrito</string>
    <string name="action_clear">Limpiar Todo</string>
    <string name="action_add_client">Clientes</string>
    <string name="search_query_text">Buscar&#8230;</string>
    <string name="confirm">Confirmacion</string>
    <string name="Alerta">Alerta</string>
    <string name="number_order">Cantidad : </string>
    <string name="clear_all_order">¿Quiere Limpiar todas las Ordenes?</string>
    <string name="clear_one_order">¿Quiere Limpiar esta orden?</string>
    <string name="db_exist_alert">¿Quieres eliminar tu pedido anterior?</string>
    <string name="msg_empty_cart">Tu carrito esta vacío!</string>
    <string name="msg_no_history">Tu historial de pedidos está vacío!</string>
    <string name="empty_cart">Whoops, Tu carrito esta vacío</string>
    <string name="empty_cart_vine">Whoops, Tu Solicitud esta vacía.</string>
    <string name="btn_continue_vine">Agregar</string>
    <string name="btn_continue_shopping">Seguir comprando</string>
    <string name="btn_add_to_cart">AÑADIR A CARRO</string>
    <string name="btn_out_of_stock">AGOTADO</string>
    <string name="msg_stock_not_enough">El stock no es suficiente</string>
    <string name="msg_stock_below_0">La cantidad del producto no puede ser 0</string>
    <string name="msg_success_add_cart">Se agrego el producto al carrito</string>
    <string name="btn_checkout">Siguiente</string>
    <string name="checkout_your_name">Vendedor</string>
    <string name="checkout_email">Código Cliente</string>
    <string name="checkout_phone_number">Nombre de Cliente</string>
    <string name="checkout_order_list">Resumen</string>
    <string name="checkout_add_comment">Comentario</string>
    <string name="no_order_menu">No orden</string>
    <string name="txt_order">Orden :</string>
    <string name="txt_tax">Impuesto :</string>
    <string name="txt_total">Total :</string>
    <string name="txt_shipping">Envio</string>
    <string name="checkout_fill_form">por favor complete el formulario primero!</string>
    <string name="checkout_dialog_title">Proceso la Orden</string>
    <string name="post_dialog_title">Atención.</string>
    <string name="post_dialog_msg">¿Estás seguro de que quieres Enviarlo?</string>
    <string name="post_success_title">Listo!</string>
    <string name="post_success_msg">Envio exitoso!.</string>
    <string name="post_submit_title">Enviando...</string>
    <string name="post_submit_msg">Por Favor, espere.</string>
    <string name="checkout_dialog_msg">¿Estás seguro de que quieres Enviarlo?</string>
    <string name="checkout_submit_title">Por favor Espere</string>
    <string name="checkout_submit_msg">Enviar su Orden&#8230;</string>
    <string name="verification_submit_msg">Verificando...</string>
    <string name="checkout_success_title">Enhorabuena</string>
    <string name="checkout_success_msg">Gracias por ordenar, su pedido será revisado pronto, sera enviados a su telefono una notificaciones cuando el pedido esté listo.</string>
    <string name="checkout_option_ok">OK</string>
    <string name="checkout_address">Dirección</string>
    <string name="checkout_shipping">Orden</string>
    <string name="title_history">Historial de pedidos</string>
    <string name="title_plan_trabajo">Plan de Trabajo </string>
    <string name="title_profile">Perfil de usuario</string>
    <string name="btn_process_checkout">PROCESAR PEDIDO</string>
    <string name="pref_group_profile">PERFIL</string>
    <string name="pref_title_name">Nombre</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_title_phone">Numero de Telefono</string>
    <string name="pref_title_address">Dirección</string>
    <string name="pref_title_ruta">Ruta</string>
    <string name="pref_title_password">Contraseña</string>
    <string name="pref_Type">Tipo</string>
    <string name="pref_DarkMode">Dark</string>
    <string name="pref_Path_Assigned">PathAssigned</string>
    <string name="pref_NvPrecio">Nv. Prec. N/D</string>
    <string name="pref_pedido_cliente">CLIENTE</string>
    <string name="pref_pedido_descripcion">DESCRIPCION</string>
    <string name="pref_pedido_direccion">DIRECION</string>
    <string name="pref_pedido_disponible">ND_DISP</string>
    <string name="pref_pedido_moroso">ND_MOROSO</string>
    <string name="default_your_name">Su Nombre</string>
    <string name="default_your_email">Su.email@gmail.com</string>
    <string name="default_your_phone">+50500000000</string>
    <string name="default_your_password">****</string>
    <string name="default_your_address">Su Dirección</string>
    <string name="default_your_ruta">Seleccine al vendedor que esta trabajando</string>
    <string name="default_path_assigned">F00</string>
    <string name="pref_msg_invalid_name">Nombre no válido</string>
    <string name="pref_msg_invalid_email">Email no válido</string>
    <string name="pref_msg_invalid_phone">Telefono no válido</string>
    <string name="pref_msg_invalid_address">Direccion no válido</string>
    <string name="pref_msg_invalid_ruta">Ruta no válido</string>
    <string name="permission_msg">Necesita Permisos</string>
    <string name="permission_storage">Esta aplicación necesita acceso al almacenamiento para descargar la imagen.</string>
    <string name="download_success">La imagen ha sido descargada y guardada en la galería.</string>
    <string name="download_msg">Descargando&#8230;</string>
    <string name="loading_msg">Por favor espera&#8230;</string>
    <string name="dialog_option_yes">Si</string>
    <string name="dialog_option_no">No</string>
    <string name="dialog_option_cancel">Cancelar</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="ce">ce</string>
    <string name="equals"></string>
    <string name="txt_editext_nc">Valor N/C</string>
    <string name="txt_editext_retencion">Retención</string>
    <string name="txt_editext_descuento">Descuento</string>
    <string name="txt_editext_recibido">Valor Recibido</string>
</resources>