<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userInputDialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#222222"
        android:gravity="center"
        android:textColor="#DFDFDF"
        android:textSize="36sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_bonificado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#222222"
            android:gravity="center"
            android:textColor="#DFDFDF"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/id_valor_producto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0.00 NIO"
            android:background="#222222"
            android:gravity="center"
            android:textColor="#DFDFDF"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b7"
            android:textColor="@color/grey_soft"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b8"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button9"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b9"
            android:textColor="@color/grey_soft" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b4"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b5"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b6"
            android:textColor="@color/grey_soft" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b1"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b2"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b3"
            android:textColor="@color/grey_soft" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ce"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ce"
            android:textColor="@color/btnColorOperation"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button0"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/b0"
            android:textColor="@color/grey_soft" />

        <Button
            android:id="@+id/button_equals"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textColor="@color/btnColorOperation"
            android:textSize="30sp"
            tools:visibility="invisible" />



    </LinearLayout>
</LinearLayout>