<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyt_checkout"
        android:layout_below="@+id/toolbar"
        android:fadeScrollbars="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingTop="18dp"
            android:paddingRight="6dp"
            android:paddingBottom="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_large">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_name"
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:hint="@string/checkout_your_name"
                        android:minHeight="@dimen/spacing_xmlarge" />

                    <View
                        android:layout_width="@dimen/spacing_middle"
                        android:layout_height="0dp" />

                    <EditText
                        android:id="@+id/edt_email"
                        style="@style/EditText.Flat.Grey.Small"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_round_bg_outline"
                        android:hint="@string/checkout_email"
                        android:minHeight="@dimen/spacing_xmlarge" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edt_phone"
                    style="@style/EditText.Flat.Grey.Small"
                    android:hint="@string/checkout_phone_number"
                    android:lines="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"

                    android:minHeight="@dimen/spacing_xmlarge" />

                <EditText

                    android:id="@+id/edt_address"
                    style="@style/EditText.Flat.Grey.Small"
                    android:lines="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:hint="@string/checkout_address"
                    android:minHeight="@dimen/spacing_xmlarge" />

            </LinearLayout>






            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_xmedium"
                android:layout_marginRight="@dimen/spacing_xmedium"
                android:gravity="center"
                android:text="@string/checkout_order_list"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_40" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_order_list"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|left"

                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/black"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:minHeight="@dimen/spacing_xmlarge">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_order_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/hint">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_xmedium"
                android:layout_marginRight="@dimen/spacing_xmedium"
                android:gravity="center"
                android:text="@string/checkout_add_comment"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/grey_40" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_comment"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="top|left"

                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/black"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@drawable/edit_text_round_bg_outline"
                    android:minHeight="@dimen/spacing_xmlarge"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/lyt_checkout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/ripple_color"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_submit_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:text="@string/btn_process_checkout"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </RelativeLayout>

</RelativeLayout>